--- a/participants.html
+++ b/participants.html
@@ -39,9 +39,9 @@
       for(var i=1; i<lines.length; i++) {
         fields = lines[i]; //.split('\t');
         //if (fields[0] == "") break;
-        //if(fields[2].trim() == "yes") {
+        if(fields[2].trim() == "TRUE") {
             text += "<li>" + stripHTML(fields[0] + " (" + fields[1] + ")") + "</li>\n";
-        //}
+        }
         // text += '<tr><td>' + stripHTML(fields[0]) + '</td>' +
         //             '<td>' + stripHTML(fields[1]) + '</td>' +
         //             '<td>' + stripHTML(fields[2]).replaceAll('\n','<br/>') + '</td>' +
