--- a/participants.html
+++ b/participants.html
@@ -60,6 +60,7 @@
       <div class="col-xs-12">
         <h1>Participants</h1>
         <div id="participants"></div>
+        <a class="btn btn-info" href="{{base}}/register.html" role="button">Register</a>
       </div>
     </div>
   </div>
