--- a/participants.html
+++ b/participants.html
@@ -59,13 +59,39 @@
   participantsFile.open("GET", url, true);
   participantsFile.send(null);
 })();
+
+function randomizeParticipantPhotos(id) {
+    var div = document.getElementById(id);
+    var newList = Array.from(div.children);
+    for(let i = 0 ; i < newList.length ; i++) {
+        let j = Math.floor(Math.random() * newList.length);
+        let tmp = newList[i];
+        newList[i] = newList[j];
+        newList[j] = tmp;
+    }
+    // bit too new for my taste: https://developer.mozilla.org/en-US/docs/Web/API/Element/replaceChildren
+    // div.replaceChildren(newList);
+    while(div.firstChild) {
+        div.removeChild(div.firstChild);
+    }
+    for(let i = 0 ; i < newList.length ; i++) {
+        div.append(newList[i]);
+    }
+}
 </script>
   <div class="container">
     <div class="row fix">
       <div class="col-xs-12">
         <h1>Participants</h1>
+        <div id="participant_photos" style="width: 100%; text-align: center">
+{%for img in site.data.participant_photos-%}
+<img src="{{img}}" alt="Photo of a participant">
+{%-endfor%}
+        </div>
+        <!-- cannot be attached to div (where I want it) via onload -->
+        <script>randomizeParticipantPhotos("participant_photos")</script>
+
         <div id="participants"></div>
-        <a class="btn btn-info" href="{{base}}/register.html" role="button">Register</a>
       </div>
     </div>
   </div>
